Changed overview layout to ensure city name doesn't overlap with weather icon or description

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ body {
 
 .card {
   padding: 40px 40px 20px 40px;
-  max-width: 800px;
+  max-width: 700px;
   margin: 0 auto;
   border-radius: 8px;
 }
@@ -40,20 +40,45 @@ form {
 }
 
 .overview {
-  height: 300px;
+  height: 280px;
 }
 
 #main-temperature {
   font-size: 80px;
   font-weight: 500;
+  position: relative;
+  float: left;
 }
 
 .main-temperature-unit {
   font-size: 36px;
   font-weight: 600;
   position: relative;
-  bottom: 32px;
-  right: 8px;
+  float: left;
+  bottom: -10px;
+  right: -2px;
+}
+
+.main-image {
+  position: relative;
+  float: left;
+  bottom: 20px;
+  right: -30px;
+}
+
+.row {
+  height: 110px;
+}
+
+ul {
+  list-style: none;
+  line-height: 2;
+  padding-top: 25px;
+  columns: 2;
+}
+
+#weather-description:first-letter {
+  text-transform: capitalize;
 }
 
 #city {
@@ -64,35 +89,8 @@ form {
 }
 
 #date {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
-}
-
-.main-image {
-  position: relative;
-  bottom: 170px;
-  left: 270px;
-  float: left;
-}
-
-#weather-description {
-  font-size: 16px;
-  font-weight: 500;
-  text-align: center;
-  position: relative;
-  bottom: 140px;
-}
-
-#weather-description:first-letter {
-  text-transform: capitalize;
-}
-
-ul {
-  list-style: none;
-  line-height: 2;
-  color: #676768;
-  padding-top: 10px;
-  margin: 10px 30px;
 }
 
 .forecast-day,
@@ -116,6 +114,10 @@ ul {
 .footer-attribution {
   text-align: right;
   color: #676768;
+}
+
+footer {
+  padding-top: 50px;
 }
 
 .footer-signature {
